Show a messge when the credentials are being verified

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -32,6 +32,7 @@ a {
 
 .login-form {
     margin-top:3em;
+    margin-bottom: 2em;
     padding:15px;
     border: 1px solid #ddd;
     background-color: #FFF;
