--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,11 +7,13 @@ body {
     font-size:16px;
 }
 
-
-
 a {
     text-decoration: none;
     color: #1b98f8;
+}
+
+a:hover {
+    color: #265778;
 }
 
 input[type=file].file-upload {
@@ -24,6 +26,10 @@ label.upload-image {
 
 .new-entry-button {
     margin-left:1.5em !important;
+}
+
+.bucket {
+    font-weight: 700;
 }
 
 .login-form {
@@ -73,6 +79,7 @@ label.upload-image {
 
 #list {
     background-color: #f5f5f5;
+    border-bottom: 1px solid #ddd;
 }
 
 .tree {
@@ -129,10 +136,12 @@ label.upload-image {
         color: #fff;
         margin-left: 0.5em;
         margin-right: 0.5em;
+        padding-left: 1.75em;
     }
     #nav .pure-menu-heading {
+        padding-left: 1.5em;
         border-bottom: none;
-        font-size:110%;
+        font-size: 110%;
         color: rgb(75, 113, 151);
     }
 
@@ -155,7 +164,7 @@ label.upload-image {
     padding-bottom:2em;
 }
         .content-title {
-            margin: 0.4em 0 0;
+            margin: 0.4em 0 0.2em 0;
         }
             .content-title span {
                font-style: italic;
@@ -170,6 +179,7 @@ label.upload-image {
         }
             .content-subtitle span {
                 color: #999;
+                font-style: italic;
             }
 
     .content-controls {
