--- a/templates/entry.html
+++ b/templates/entry.html
@@ -24,8 +24,37 @@
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+
+    <script>var KEY = '{{&key}}';</script>
     <script>var BUCKET = '{{&bucket}}';</script>
     <script>var ENDPOINT = '{{&endpoint}}';</script>
+
+    <script id="menu-partial" type="text/x-handlebars-template">
+        <ul class="pure-menu-list">
+            {{#unless index}}
+                <li class="pure-menu-item {{#if children}}has-children{{/if}}"><a href="{{&endpoint}}{{key}}" class="pure-menu-link">{{label}}</a></li>
+                {{#children}}
+                    {{> menu}}
+                {{/children}}
+            {{/unless}}
+        </ul>
+    </script>
+
+    <script id="nav-template" type="text/x-handlebars-template">
+        <div class="pure-menu">
+            <a class="pure-menu-heading" href="{{&endpoint}}"><img src="{{&endpoint}}.dodgercms/logo.png"></a>
+            <ul class="pure-menu-list">
+            {{#nav}}
+                {{#unless index}}
+                    <li class="pure-menu-item {{#if children}}has-children{{/if}}"><a href="{{&endpoint}}{{key}}" class="pure-menu-link">{{label}}</a></li>
+                    {{#children}}
+                        {{> menu}}
+                    {{/children}}
+                {{/unless}}
+            {{/nav}}
+            </ul>
+        </div>
+    </script>  
 
    <style>
         body {
