--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22,10 +22,15 @@ input[type=file].file-upload {
 
 label.upload-image {
     display: inline-block;
+    margin:0;
 }
 
 .new-entry-button {
     margin-left:1.5em !important;
+}
+
+.none {
+    display: none !important;
 }
 
 .bucket {
@@ -190,8 +195,15 @@ label.upload-image {
             margin-bottom: 0.3em;
         }
 
+.toolbar {
+    margin: 0.25em 0;
+}
 .toolbar-button {
+    background: #ededed;
+}
 
+.button-small {
+    font-size: 0.85em;
 }
 /*
  * -- TABLET (AND UP) MEDIA QUERIES --
