Max the image with in the article content

--- a/templates/entry.html
+++ b/templates/entry.html
@@ -112,6 +112,10 @@
             padding:1.5em 3.25em;
         }
 
+        #entry .content img {
+            max-width: 100%;
+        }
+        
         /*
             This is the parent `<div>` that contains the menu and the content area.
         */
