--- a/public/css/app.css
+++ b/public/css/app.css
@@ -198,6 +198,10 @@ label.upload-image {
             margin-bottom: 0.3em;
         }
 
+.content-textarea {
+    line-height: 1.5em;
+}
+
 .toolbar {
     margin: 0.25em 0;
 }
