Add border and padding to content images

--- a/templates/entry.html
+++ b/templates/entry.html
@@ -146,8 +146,8 @@
 
     #entry .content img {
       max-width: 100%;
-      border: 1px solid #f0f0f0;
-      padding: 0.05em;
+      border: 1px solid #ededed;
+      padding: 0.15em;
     }
 
     /*
