--- a/templates/entry.html
+++ b/templates/entry.html
@@ -24,7 +24,6 @@
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/github.min.css">
 
-  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.1/handlebars.min.js"></script>
 
@@ -484,17 +483,27 @@
 
     <script>
       (function (window, document) {
+        var request = new XMLHttpRequest();
+        request.onreadystatechange = function() {
+          if (request.readyState === 4 && request.status === 200) {
+            requestCallback(JSON.parse(request.responseText));
+          }
+        };
+
+        request.open("GET", "{{&endpoint}}{{dataKey}}");
+        request.send();
+
         // Retrieve the json file with menu data
-        $.get("{{&endpoint}}{{dataKey}}", function(data) {
+        function requestCallback(data) {
           var parts = KEY.split('/');
           var breadcrumbs = [];
 
           // Use the menu json to build a tree list
           buildFromSegments(data, breadcrumbs, parts);
 
-          var navTemplate = $("#nav-template").html();
+          var navTemplate = document.getElementById('nav-template').innerHTML;
           var nav = Handlebars.compile(navTemplate);
-          var menuPartial = $("#menu-partial").html();
+          var menuPartial = document.getElementById('menu-partial').innerHTML;
           var menu = Handlebars.compile(menuPartial);
 
           // Register the partial so it can be used in the nav template
@@ -507,19 +516,18 @@
             endpoint: ENDPOINT
           };
           var navHtml = nav(navContext);
-          $("nav").html(navHtml);
-
+          document.getElementById('menu').innerHTML = navHtml;
 
           // Breadcrumbs
-          var headerTemplate = $("#header-template").html();
+          var headerTemplate = document.getElementById('header-template').innerHTML;
           var header = Handlebars.compile(headerTemplate);
           var headerContext = {
             breadcrumbs: breadcrumbs
           };
 
           var headerHtml = header(headerContext);
-          $("#header").html(headerHtml);
-        });
+          document.getElementById('header').innerHTML = headerHtml;
+        };
 
         function buildFromSegments(scope, breadcrumbs, pathSegments) {
           // Remove the first segment from the path
