Fix hover for breacrumb links in header

--- a/templates/entry.html
+++ b/templates/entry.html
@@ -197,6 +197,7 @@
     .header .breadcrumbs .pure-menu-link:hover {
       text-decoration: none;
       color:#146092;
+      background: none;
     }
 
     .header .breadcrumbs .menu-slug {
