added class and wrapwith attribtues to data type example and app.js

--- a/public/js/data-types/partials/multiples.html
+++ b/public/js/data-types/partials/multiples.html
@@ -9,7 +9,7 @@
   <label class="pure-checkbox"><input type="checkbox" id="beach-5" value="Oceanfront" {{{checked_element "beach-5"}}}/> Oceanfront</label>
 </div>
 <label>Message</label>
-<select id="message" data-value="{{{before_after_split "message"}}}" data-before="" data-after="">
+<select id="message" data-value="{{{before_after_split "message"}}}" data-before="" data-after="" data-class="col-xs-8" data-wrapwith="<b></b>">
   <option value=""></option>
   <option value="The following major roadways have been closed or detoured. Motorists are urged to use alternate routes.">The following major roadways have been closed or detoured. Motorists are urged to use alternate routes.</option>
   <option value="The following major roadways have been re-opened:">The following major roadways have been re-opened:</option>
