corrected issue of wysiwyg content not propagating to tinymce editor

--- a/public/js/data-types/partials/multiples.html
+++ b/public/js/data-types/partials/multiples.html
@@ -19,4 +19,4 @@
   {{{multiples_text "roads"}}}
 </div>
 <label>Notes</label>
-<textarea id="notes" class="pure-u-1 content-textarea wysiwyg" rows="25">{{{before_after_split "notes"}}}</textarea>
+<textarea id="notes" class="pure-u-1 content-textarea wysiwyg" rows="25">{{{before_after_split "notes" "wysiwyg"}}}</textarea>
