Added support for radio input elements in partials templates

--- a/public/js/data-types/partials/multiples.html
+++ b/public/js/data-types/partials/multiples.html
@@ -18,5 +18,11 @@
 <div class="multiples">
   {{{multiples_text "roads"}}}
 </div>
+<div>
+  <label>Radio Elements</label>
+  <input {{{radio "status" "Choice 1"}}}/> Choice 1<br/>
+  <input {{{radio "status" "Choice 2"}}}/> Choice 2<br/>
+  <input {{{radio "status" "Choice 3"}}}/> Choice 3
+</div>
 <label>Notes</label>
 <textarea id="notes" class="pure-u-1 content-textarea wysiwyg" rows="25">{{{before_after_split "notes" "wysiwyg"}}}</textarea>
