--- a/public/js/data-types/partials/multiples.html
+++ b/public/js/data-types/partials/multiples.html
@@ -24,5 +24,12 @@
   <input {{{radio "status" "Choice 2"}}}/> Choice 2<br/>
   <input {{{radio "status" "Choice 3"}}}/> Choice 3
 </div>
+
+<!-- File Upload -->
+<hr/>
+<label for="upload-file-1" class="button-small pure-button upload-image" title="Attach a file"><i class="fa fa-cloud-upload"></i> Attach a File</label>
+<input id="upload-file-1" type="file" class="file-upload" />
+
+<!-- WYSIWYG -->
 <label>Notes</label>
 <textarea id="notes" class="pure-u-1 content-textarea wysiwyg" rows="25">{{{before_after_split "notes" "wysiwyg"}}}</textarea>
