Removed need to specify data and assets buckets. Automatically uses "assets."<site> and "data."<site> if no assets/data buckets specified.

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -55,6 +55,11 @@ p.help {
   font-size:1.1em;
 }
 
+.container .content {
+    display: none;
+    padding : 5px;
+}
+
 @media (min-width: 48em) {
   .container  {
     width: 24em;
