--- a/templates/entry.html
+++ b/templates/entry.html
@@ -491,7 +491,7 @@
           }
         };
 
-        request.open("GET", "https://dodgercms.com/{{dataKey}}");
+        request.open("GET", "{{&endpoint}}/{{dataKey}}");
         request.send();
 
         // Retrieve the json file with menu data
